# OmniVector-Embed

./: .gitignore  .ruff.toml  CONTRIBUTING.md  PYPI_README.md  README.md  WEEK1_COMPLETION.md  WEEK1_TEST_RESULTS.md  mypy.ini  pyproject.toml  requirements-ci.txt  run.sh
.github/workflows/: ci.yml  evaluate.yml  export.yml  release.yml
configs/: deepspeed_zero2.json  lora.yaml  multimodal_vision.yaml  stage1_retrieval.yaml  stage2_generalist.yaml  stage3_multimodal.yaml
docs/: IMPLEMENTATION_PROGRESS.md  TESTING.md  architecture.md  implementation-plan.md  testing.md
scripts/: build_dataset.py  download_wavcaps_audio.py  evaluate.py  export_onnx.py  generate_eval_report.py  generate_export_report.py  mine_hard_negatives.py  quantize_onnx.py  train.py  train_multimodal.py  training.py  upload_to_hub.py  validate_onnx.py
src/omnivector/: __init__.py
src/omnivector/data/: __init__.py  dataset.py  multimodal_dataset.py  preprocessing.py  schema.py
src/omnivector/data/loaders/: __init__.py  base.py  beir.py  hotpotqa.py  msmarco.py  multimodal.py
src/omnivector/eval/: __init__.py  mteb_runner.py
src/omnivector/export/: __init__.py  onnx_exporter.py  onnx_quantizer.py  onnx_validator.py
src/omnivector/model/: __init__.py  audio_encoder.py  backbone.py  latent_attention.py  omnivector_model.py  video_encoder.py  vision_encoder.py
src/omnivector/training/: __init__.py  callbacks.py  hard_negative_miner.py  losses.py  multimodal_loss.py  multimodal_trainer.py  trainer.py
tests/: conftest.py
tests/integration/: test_imports.py  test_training.py
tests/unit/: test_audio_encoder.py  test_backbone.py  test_bidirectionality.py  test_build_dataset.py  test_callbacks.py  test_cross_attention.py  test_data.py  test_hard_negative_miner.py  test_latent_attention.py  test_loaders.py  test_model.py  test_mteb_runner.py  test_multimodal.py  test_multimodal_training.py  test_onnx_export.py  test_trainer.py  test_training_configs.py  test_vision_encoder.py
